manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovannlyna-api-dev-new-k8s-service
spec:
  type: NodePort
  selector:
    app: sovannlyna-api-dev-new-k8s
  ports:
    - protocol: TCP
      port: 8227
      targetPort: 8080
